<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_camera">Click to Open the Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="title_app">Smart Hoya</string>
    <string name="title_welcome">Selamat Datang di \nSmartHoya</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_register">Daftar</string>
    <string name="offer_signup">Belum mempunyai akun?</string>
    <string name="offer_login">Sudah mempunyai akun?</string>
    <string name="btn_signup">Daftar</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="image_description">This is image</string>
    <string name="label_trending_forum">Trending in Forum</string>
    <string name="view_all">View All</string>
    <string name="label_plant_collection">Plant Photos</string>
    <string name="label_spread_map">Spread Map</string>
    <string name="label_comment">Comment</string>
    <string name="label_like">Like</string>
    <string name="label_share">Share</string>
    <string name="app_title">iHoya</string>
    <string name="app_desc">Fungsi utama aplikasi ini adalah untuk membantu mengidentifikasi dan memberikan informasi terkait tanaman Hoya</string>
    <string name="sumatra">Sumatra</string>
    <string name="kalimantan">Kalimantan</string>
    <string name="sulawesi">Sulawesi\n</string>
    <string name="papua">Papua</string>
    <string name="jawa">Jawa</string>
    <string name="bali">Bali</string>
    <string name="ntb">NTB</string>
    <string name="ntt">NTT</string>
    <string name="hoya_search_hint">Cari tanaman Hoya</string>
    <string name="title_activity_register">activity_register</string>


    <!--  Profile  -->
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>


    <string name="strip">-</string>
    <string name="nol">0</string>
</resources>