<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.myapplication.ui.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.myapplication.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.myapplication.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/hoyaSearchFragment"
        android:name="com.example.myapplication.ui.hoya_search.HoyaSearchFragment"
        android:label="fragment_hoya_search"
        tools:layout="@layout/fragment_hoya_search" />
</navigation>