<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@color/blue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/Subtitle2Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/strip"
        android:textColor="@color/shades7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgUser"
        app:layout_constraintTop_toTopOf="@+id/imgUser"
        tools:text="Choi jisoo" />

    <TextView
        android:id="@+id/tvCreatedAt"
        style="@style/Subtitle2Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/strip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
        tools:text="25 Dec 2000" />

    <LinearLayout
        android:id="@+id/llBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@+id/imgUser">

        <TextView
            android:id="@+id/tvDesc"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            tools:text="Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsumLorem ipsum"/>

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"
            android:src="@color/red1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgUser"
            app:layout_constraintTop_toBottomOf="@+id/imgUser" />

        <LinearLayout
            android:id="@+id/llCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/imgPost"
            app:layout_constraintStart_toStartOf="@+id/imgPost"
            app:layout_constraintTop_toBottomOf="@+id/imgPost">

            <TextView
                android:id="@+id/tvCountComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="@string/nol" />

            <TextView
                android:id="@+id/tvCountLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nol" />

            <TextView
                android:id="@+id/tvCountShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nol" />

            <TextView
                android:id="@+id/tvCountSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nol" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/shades2"
            app:layout_constraintEnd_toEndOf="@+id/llCount"
            app:layout_constraintStart_toStartOf="@+id/llCount"
            app:layout_constraintTop_toBottomOf="@+id/llCount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/imgPost"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="@string/label_comment"
                app:drawableTopCompat="@drawable/ic_comment" />

            <TextView
                android:id="@+id/tvLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_like"
                app:drawableTopCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_share"
                app:drawableTopCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/title_bookmark"
                app:drawableTopCompat="@drawable/ic_bookmark" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>